src/test/deca/syntax/invalid/print_missing_parent.deca

// Description :
// println sans parenthèses
//
// Resultats :
// Erreur syntaxique
// Regle : inst : PRINTLN '(' list_expr ')' ';'

{
    println 3;
}